--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -1,4 +1,4 @@
-# data/effect.yaml
+# data/effect_emblem.yaml
 # yaml-language-server: $schema=../packages/schema/schema/effect.schema.json
 # @metaType effect
 # @version 1.0.0
