--- a/data/mark_ability.yaml
+++ b/data/mark_ability.yaml
@@ -6,16 +6,18 @@
 - id: mark_ability_zhongjie
   name: 终结
   description: 体力低于1/4以下时消耗弱点记号的技能造成的伤害增加25%
-  config:
+  config: &ablitity_config
     persistent: true
     stackable: false
     stackStrategy: extend
-    destoyable: true
+    destroyable: true
 - id: mark_ability_yanhuo
   name: 炎火
+  config: *ablitity_config
   description: 体力低于1/4以下时火系技能造成的伤害增加25%
 - id: mark_ability_jianren
   name: 坚韧
+  config: *ablitity_config
   description: 体力低于1/4以下时受到伤害减少25%
 - id: mark_ability_rumeng
   name: 入梦
