--- a/data/effect_emblem.yaml
+++ b/data/effect_emblem.yaml
@@ -24,3 +24,30 @@
     type: setMarkTransferOnSwitch
     target: addMarkContext
     value: true
+- id: effect_emblem_increase_rage_on_damage
+  trigger: OnRageGain
+  priority: 0
+  condition:
+    type: selfBeDamaged
+  apply:
+    type: addModified
+    target: rageContext
+    percent: 20
+    delta: 0
+- id: effect_emblem_20percent_double_heal
+  trigger: OnHeal
+  priority: 0
+  condition:
+    type: every
+    conditions:
+      - type: selfBeHeal
+      - type: evaluate
+        target: self
+        evaluator:
+          type: probability
+          percent: 20
+  apply:
+    type: addModified
+    target: healContext
+    percent: 100
+    delta: 0
